--- a/userChrome.css
+++ b/userChrome.css
@@ -5,7 +5,7 @@
 .titlebar-buttonbox-container, .tab-close-button,
 #reload-button, #stop-button, #tabs-newtab-button,
 .tab-secondary-label, #tabrowser-tabs .tab-context-line,
-#home-button, #library-button, #picture-in-picture-toggle,
+#home-button, #library-button,
 .tab-icon-stack:not([pinned]), #urlbar-search-mode-indicator,
 #customizableui-special-spring1, #customizableui-special-spring2,
 #library-button, #statuspanel, #identity-box, #tracking-protection-icon-container
