--- a/userChrome.css
+++ b/userChrome.css
@@ -1,48 +1,64 @@
-/* Hide unwanted buttons and elements */
-#back-button, #forward-button,
-#pocket-button, #scrollbutton-down,
-#scrollbutton-up, #PanelUI-menu-button,
+/* Hide unwanted elements */
+#back-button, #forward-button, #pocket-button,
+#scrollbutton-down, #scrollbutton-up, #PanelUI-menu-button,
 .titlebar-buttonbox-container, .tab-close-button,
 #reload-button, #stop-button, #tabs-newtab-button,
 .tab-secondary-label, #tabrowser-tabs .tab-context-line,
-#home-button, #library-button,
 .tab-icon-stack:not([pinned]), #urlbar-search-mode-indicator,
+#home-button, #library-button, #urlbar-go-button, .urlbarView,
 #customizableui-special-spring1, #customizableui-special-spring2,
-#library-button, #statuspanel, #identity-box, #tracking-protection-icon-container
-#urlbar-zoom-button, #alltabs-button, .titlebar-spacer, #star-button-box { display: none !important; }
+#library-button, #statuspanel, #identity-box,
+#tracking-protection-icon-container, #urlbar-zoom-button,
+#alltabs-button, .titlebar-spacer, #star-button-box {
+  display: none !important;
+}
 
-#navigator-toolbox-background { height: 0 !important; }
-#navigator-toolbox { z-index: 1; border-bottom: none !important; }
-.tabbrowser-tab[fadein] { max-width: 100vw !important; border: none }
+#navigator-toolbox {
+  height: 0 !important;
+  z-index: 1;
+  border-bottom: none !important;
+}
+
+/* Customize tab appearance */
+.tabbrowser-tab[fadein] { 
+  max-width: 100vw !important; 
+  border: none; 
+  transition: max-width 500ms ease-in-out;
+}
 
 #titlebar {
 	--proton-tab-block-margin: 0px !important;
 	--tab-block-margin: 0px !important;
-    --tab-min-height: 16px !important;
+  --tab-min-height: 16px !important;
 }
 
-#TabsToolbar, .tabbrowser-tab {
+#TabsToolbar, .tabbrowser-tab{
 	max-height: 16px !important;
 	font-size: 11px !important;
-    background-color: #0c0c0e !important;
+  background-color: #1a1a24 !important;
+  transition: max-height 500ms ease-in-out;
 }
 
-.tab-background[selected="true"] {
-    background-color: #242430 !important;
-  }
+tab[selected="true"] .tab-background {
+  border-top: 2px solid #b4befe !important;
+  background-color: #313244 !important;
+  border-radius: 0 !important;
+  transition: border-top 500ms ease-in-out, background-color 500ms ease-in-out;
+}
 
 #browser {
-    margin-top: 13px !important;
-  }
+  margin-top: 11px !important;
+}
 
 #nav-bar {
+  height: 0px;
   opacity: 0 !important;
-  transition: height 200ms ease-in-out, opacity 175ms ease-in-out;
+  transition: height 600ms ease-in-out, opacity 400ms ease-in-out;
 }
 
 #nav-bar:hover,
-#nav-bar:focus-within {
-  height: 24px;
+#nav-bar:focus-within,
+#titlebar:hover + #nav-bar:not([customizing]) {
   opacity: 1 !important;
-  transition: opacity 175ms ease-in-out;
+  transition: opacity 400ms ease-in-out;
 }
